Refacotring to improve maintainability